--- a/login/my.css
+++ b/login/my.css
@@ -22,6 +22,7 @@ color: #f0f0f0;
 }
 .input-group{
     margin-bottom: 1.5rem;
+    
 }
 label{
     display: block;
@@ -30,7 +31,7 @@ label{
 }
 input[type="text" ],input[type="password"]{
     width: 100%;
-    padding: 0rem;
+    padding: 8px;
     border-radius: 5px;
     border: none;
     background-color: #2c2c2c;
